# Robopoint_Jazzy

./: README.md  point_viz.py
install/: local_setup.sh  setup.sh
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: local_setup.sh  package.sh
install/interbotix_common_modules/share/interbotix_common_modules/: package.sh
install/interbotix_common_sim/share/interbotix_common_sim/: local_setup.sh  package.sh
install/interbotix_common_toolbox/share/interbotix_common_toolbox/: local_setup.sh  package.sh
install/interbotix_ros_xsarms/share/interbotix_ros_xsarms/: package.sh
install/interbotix_ros_xsarms_examples/share/interbotix_ros_xsarms_examples/: package.sh
install/interbotix_ros_xseries/share/interbotix_ros_xseries/: package.sh
install/interbotix_xs_msgs/share/interbotix_xs_msgs/: package.sh
log/: latest_build
src/image_projector/: package.xml  setup.cfg  setup.py
src/image_projector/image_projector/: activate_realsense.bash  image_projector.py  image_projector.py.old  realsense_projector.py
src/robopoint_interfaces/: CMakeLists.txt
src/robopoint_interfaces/msg/: DesiredJointStates.msg
src/robopoint_interfaces/srv/: Query.srv
src/robopoint_llm/: package.xml  setup.cfg  setup.py
src/robopoint_llm/robopoint/: mm_utils.py  run_llm.py  run_llm_service.py  test_llm_service.py
src/robopoint_llm/robopoint_llm/: query.py
src/robot_control/: setup.py
src/robot_control/robot_control/: endpoint_calculator.py  move_arm.py
src/robot_startup/: package.xml  setup.cfg  setup.py
src/robot_startup/launch/: full_system.launch.py
(+218 files in other folders)
