<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_projector</name>
  <version>0.0.0</version>
  <description>get 2d and 3d coords</description>
  <maintainer email="hominhan56@gmail.com">ddq2</maintainer>
  <license>TODO: License declaration</license>
  <exec_depend>robopoint_interfaces</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
